changed from *secrets* to __SECRETS

--- a/sanitiser/.env
+++ b/sanitiser/.env
@@ -1,27 +1,20 @@
-# *secret*
-GM_USER=fake.user@gmail.com
-# *secret*
-GM_TO=fake.user@blah.com
-# *secret*
-GM_PSW=fakepsw
+
+GM_USER__SECRET=fake.user@gmail.com
+GM_TO__SECRET=fake.user@blah.com
+GM_PSW__SECRET=fakepsw
 GM_SERVER=smtp.gmail.com
 GM_PORT=587
 
 HOST_NAME=Centaurus
-# *secret*
-PLEX_TOKEN=seper secret plex token
+PLEX_TOKEN__SECRET=seper secret plex token
 
 #
 # API_Keys
 #
-# *secret*
-SONARR_API_KEY=98765432123456789
-# *secret*
-RADARR_API_KEY=98765432123456789
-# *secret*
-BAZARR_API_KEY=98765432123456789
-# *secret*
-RADARR4K_API_KEY=98765432123456789
+SONARR_API_KEY__SECRET=98765432123456789
+RADARR_API_KEY__SECRET=98765432123456789
+BAZARR_API_KEY__SECRET=98765432123456789
+RADARR4K_API_KEY__SECRET=98765432123456789
 
 # let this next one bypass the sanitiser
 #
